# metabolic_educator_simulator

./: CODEBASE_ANALYSIS.md  CRITICAL_ANALYSIS.md  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.widget.config.js  vitest.config.js
docs/: API.md  BENCHMARK.md  PUBLICATION_GUIDE.md  README.md
public/: manifest.json  sw.js
python/: README.md  pyproject.toml
python/metabolicsuite/: __init__.py  api.py  benchmark.py  parsers.py  templates.py  widget.py
python/metabolicsuite/benchmark_data/models/: catalog.json
python/metabolicsuite/benchmark_data/results/: cobrapy_results_20251226_101910.json  cobrapy_results_20251226_213636.json  validation_2025-12-26T1033.json  validation_2025-12-26T1033.tex  validation_2025-12-26T1036.json  validation_2025-12-26T1036.tex  validation_2025-12-26T1037.json  validation_2025-12-26T1037.tex  validation_2025-12-26T2114.json  validation_2025-12-26T2114.tex  validation_2025-12-26T2133.json  validation_2025-12-26T2133.tex  validation_2025-12-26T2134.json  validation_2025-12-26T2134.tex  validation_2025-12-26T2135.json  validation_2025-12-26T2135.tex  validation_2025-12-26T2139.json  validation_2025-12-26T2139.tex
python/metabolicsuite/static/: widget.js  widget.js.map
scripts/: generate-benchmark-plots.py  validate-highs.mjs
src/: App.jsx  TestComponent.jsx  index.css  main.jsx
src/components/: BenchmarkValidation.jsx  DocumentationViewer.jsx  EducationalFeatures.jsx  EnhancedModeling.jsx  EscherImport.jsx  MetabolicModelingPlatform.jsx  ModelUpload.jsx  OmicsDataUpload.jsx  OmicsLearningBridge.jsx  OmicsVisualization.jsx  PathwayMapBuilder.jsx  StateSharing.jsx  SubsystemView.jsx  Visualizations.jsx
src/contexts/: ModelContext.jsx  OmicsContext.jsx  ThemeContext.jsx
src/data/: metabolicData.js  pathwayTemplates.js
src/hooks/: useKeyboardShortcuts.js  useMapHistory.js  useMapSearch.js
src/lib/: BackendService.js  BenchmarkRunner.js  ComputeWorker.js  EscherParser.js  FBASolver.js  FBASolver.test.js  ForceLayout.js  HiGHSSolver.js  LargeModelHandler.js  OmicsIntegration.js  OmicsIntegration.test.js  SolverWorker.js  SolverWorker.test.js  StateManager.js
src/test/: setup.js
(+3 files in other folders)
